Fixed a word-wrap issue and added ability to render code blocks in chatbot responses

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -59,11 +59,12 @@ html, body{
 }
 
 #userInput {
-    width: calc(100% - 60px);
+    width: calc(100% - 100px);
     border: none;
     border-radius: 25px;
     padding: 16px;
     background-color: transparent;
+    word-wrap: break-word;
 }
 
 #userInput:focus {
@@ -116,7 +117,7 @@ html, body{
     align-self: flex-end;
     color: white;
     margin-left: auto;
-    text-align: right;
+    text-align: left;
     word-wrap: break-word;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease;
@@ -144,6 +145,20 @@ html, body{
 
 .botRes:hover{
     transform: scale(1.05);
+}
+
+.code{
+    border: none;
+    background-color: #1e1e1e;
+    resize: none;
+    height: auto;
+    font-size: 12px;
+    word-wrap: normal;
+    word-break: break-all;
+    padding: 0 12px 12px 12px;
+    margin: 12px 0;
+    border-radius: 2px;
+    text-align: left;
 }
 
 .copyButton {
